--- a/IFC_Engine/IFC_Engine.csproj
+++ b/IFC_Engine/IFC_Engine.csproj
@@ -43,6 +43,10 @@
       <HintPath>C:\ProgramData\BHoM\Assemblies\BHoM_Engine.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Data_Engine, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\..\ProgramData\BHoM\Assemblies\Data_Engine.dll</HintPath>
+    </Reference>
     <Reference Include="Data_oM">
       <HintPath>C:\ProgramData\BHoM\Assemblies\Data_oM.dll</HintPath>
       <Private>False</Private>
@@ -193,8 +197,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Convert\FromIFC.cs" />
+    <Compile Include="Convert\Geometry\FromIFC\Point.cs" />
+    <Compile Include="Convert\Geometry\FromIFC\TransformMatrix.cs" />
+    <Compile Include="Convert\Physical\FromIFC\Floor.cs" />
+    <Compile Include="Convert\Physical\FromIFC\ReinforcingBar.cs" />
+    <Compile Include="Query\CorrespondentIFCTypes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Query\CorrespondentType.cs" />
+    <Compile Include="Query\DefaultIfNull.cs" />
+    <Compile Include="Query\Discipline.cs" />
+    <Compile Include="Query\IFCEntities.cs" />
     <Compile Include="Query\IFCMeshes.cs" />
     <Compile Include="Query\Meshes.cs" />
   </ItemGroup>
