--- a/IFC_oM/IFC_oM.csproj
+++ b/IFC_oM/IFC_oM.csproj
@@ -60,6 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Config\IFCPullConfig.cs" />
+    <Compile Include="Enums\Discipline.cs" />
     <Compile Include="Misc\IFCRepresentation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings\IFCSettings.cs" />
