--- a/IFC_Engine/IFC_Engine.csproj
+++ b/IFC_Engine/IFC_Engine.csproj
@@ -204,7 +204,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query\DefaultIfNull.cs" />
     <Compile Include="Query\Discipline.cs" />
-    <Compile Include="Query\IFCMeshes.cs" />
+    <Compile Include="Query\IfcMeshes.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Compute\" />
