--- a/IFC_Adapter/IFC_Adapter.csproj
+++ b/IFC_Adapter/IFC_Adapter.csproj
@@ -238,7 +238,7 @@
     <Compile Include="AdapterActions\Push.cs" />
     <Compile Include="AdapterActions\Pull.cs" />
     <Compile Include="Methods\Convert\Environment\FromIFC\Space.cs" />
-    <Compile Include="Methods\Convert\FromIFC.cs" />
+    <Compile Include="Methods\Convert\FromIfc.cs" />
     <Compile Include="Methods\Convert\Geometry\FromIFC\Point.cs" />
     <Compile Include="Methods\Convert\Geometry\FromIFC\TransformMatrix.cs" />
     <Compile Include="Methods\Convert\Physical\FromIFC\Floor.cs" />
