--- a/IFC_Engine/IFC_Engine.csproj
+++ b/IFC_Engine/IFC_Engine.csproj
@@ -201,16 +201,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Compute\UnsupportedUnitsWarning.cs" />
     <Compile Include="Create\IfcPullConfig.cs" />
+    <Compile Include="Modify\SetIfcProperty.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query\DefaultIfNull.cs" />
     <Compile Include="Query\Discipline.cs" />
+    <Compile Include="Query\GetIfcProperties.cs" />
+    <Compile Include="Query\GetIfcPropertyValue.cs" />
     <Compile Include="Query\IfcMeshes.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Compute\" />
-    <Folder Include="Modify\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\IFC_oM\IFC_oM.csproj">
       <Project>{506679c5-d5b2-4758-b1dd-b980f198cbd6}</Project>
