--- a/IFC_Adapter/IFC_Adapter.csproj
+++ b/IFC_Adapter/IFC_Adapter.csproj
@@ -245,6 +245,7 @@
     <Compile Include="Methods\Convert\Physical\FromIFC\ReinforcingBar.cs" />
     <Compile Include="CRUD\Read.cs" />
     <Compile Include="IfcAdapter.cs" />
+    <Compile Include="Methods\Modify\CopyProperties.cs" />
     <Compile Include="Methods\Query\CorrespondentIfcTypes.cs" />
     <Compile Include="Methods\Query\IfcEntities.cs" />
     <Compile Include="Methods\Query\Meshes.cs" />
