--- a/IFC_Adapter/IFC_Adapter.csproj
+++ b/IFC_Adapter/IFC_Adapter.csproj
@@ -237,6 +237,7 @@
     <Compile Include="AdapterActions\Remove.cs" />
     <Compile Include="AdapterActions\Push.cs" />
     <Compile Include="AdapterActions\Pull.cs" />
+    <Compile Include="Methods\Compute\CastToIfcObject.cs" />
     <Compile Include="Methods\Convert\Environment\FromIFC\Space.cs" />
     <Compile Include="Methods\Convert\FromIfc.cs" />
     <Compile Include="Methods\Convert\Geometry\FromIFC\Point.cs" />
@@ -245,7 +246,7 @@
     <Compile Include="Methods\Convert\Physical\FromIFC\ReinforcingBar.cs" />
     <Compile Include="CRUD\Read.cs" />
     <Compile Include="IfcAdapter.cs" />
-    <Compile Include="Methods\Modify\CopyProperties.cs" />
+    <Compile Include="Methods\Modify\CopyIfcPropertiesToFragment.cs" />
     <Compile Include="Methods\Query\CorrespondentIfcTypes.cs" />
     <Compile Include="Methods\Query\IfcEntities.cs" />
     <Compile Include="Methods\Query\Meshes.cs" />
