support for identifiers added

--- a/IFC_oM/IFC_oM.csproj
+++ b/IFC_oM/IFC_oM.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="Config\IfcPullConfig.cs" />
     <Compile Include="Enums\Discipline.cs" />
+    <Compile Include="Misc\IfcIdentifiers.cs" />
     <Compile Include="Misc\IfcRepresentation.cs" />
     <Compile Include="IfcProperties\IfcProperty.cs" />
     <Compile Include="IfcProperties\IfcPropertiesToPush.cs" />
