--- a/IFC_Adapter/IFC_Adapter.csproj
+++ b/IFC_Adapter/IFC_Adapter.csproj
@@ -246,6 +246,7 @@
     <Compile Include="Methods\Convert\Physical\FromIFC\ReinforcingBar.cs" />
     <Compile Include="CRUD\Read.cs" />
     <Compile Include="IfcAdapter.cs" />
+    <Compile Include="Methods\Modify\CopyIdentifiersToFragment.cs" />
     <Compile Include="Methods\Modify\CopyIfcPropertiesToFragment.cs" />
     <Compile Include="Methods\Query\CorrespondentIfcTypes.cs" />
     <Compile Include="Methods\Query\IfcEntities.cs" />
