--- a/IFC_Adapter/IFC_Adapter.csproj
+++ b/IFC_Adapter/IFC_Adapter.csproj
@@ -237,6 +237,7 @@
     <Compile Include="AdapterActions\Remove.cs" />
     <Compile Include="AdapterActions\Push.cs" />
     <Compile Include="AdapterActions\Pull.cs" />
+    <Compile Include="CRUD\Update.cs" />
     <Compile Include="Methods\Compute\CastToIfcObject.cs" />
     <Compile Include="Methods\Convert\Environment\FromIFC\Space.cs" />
     <Compile Include="Methods\Convert\FromIfc.cs" />
